--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-server": "^14.1.1"
   },
   "dependencies": {
-    "three": "^0.159.0"
+    "three": "^0.159.0",
+    "@types/three": "^0.159.0"
   }
 }
